refactor: adding unauthorized error for users without the required role